<resources>
    <string name="app_name">WFMS</string>
    <string name="go_to_home_page">Go To Home Page</string>
    <string name="start_day">Start Day</string>
    <string name="leave_management">Leave &amp; OD </string>
    <string name="my_attendance">My Attendance</string>
    <string name="my_claims">My Claims</string>
    <string name="my_salary">My salary</string>
    <string name="please_select_activities">Please Select Activities</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel" translatable="false">CANCEL</string>
    <string name="select_a_project">Select a Project</string>
    <string name="activity_message">Enter activity message</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="reset_text">We require your registered email for sending you the  password!!</string>
    <string name="reset_phone_text">We require your registered phone number for sending !!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="reset_password">Reset Password</string>
    <string name="not_started">Not Started</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="load_data">Load Data</string>
    <string name="leave_details">Leave Details</string>
    <string name="_0">0</string>
    <string name="holiday">Holiday</string>
    <string name="rejection">Rejection</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="leave">Leave</string>
    <string name="absent">Absent</string>
    <string name="regularised">Present</string>
    <string name="email_address">Email Address</string>
    <string name="my_task">My Task</string>
    <string name="perform">Perform</string>
    <string name="textview">TextView</string>
    <string name="current_location">Current Location</string>
    <string name="internet_connection">Please check your Internet Connection</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="fromloc_data">Please enter from location</string>
    <string name="toloc_data">Please enter to location</string>
    <string name="distance_data">Please enter distance</string>
    <string name="amount_data">Please enter amount</string>
    <string name="remarks_data">Please enter remarks</string>
    <string name="fromDate_data">Please select From Date</string>
    <string name="toDate_data">Please select To Date</string>
    <string name="reason_data">Please enter reason</string>
    <string name="application_data">Please select no of days</string>
    <string name="err_leave_type">Please select leave type</string>
    <string name="title_activity_maps">Map</string>
    <string name="GPSAlertDialogTitle">Location On</string>
    <string name="GPSAlertDialogMessage">Please switch on your location</string>
    <string name="action_settings">Go to Setting</string>
    <string name="claim_title">Please select the claim title</string>
    <string name="transport_mode">Please select the transport mode</string>
    <string name="transport">Transport Mode</string>
    <string name="other">Other</string>
    <string name="mode">Mode</string>
    <string name="dont_close">Do not close this app</string>
    <string name="company_info">HTIS Employee Self Care</string>
    <string name="Select_status_title">Please select a status</string>
    <string name="new_claim">New Claim</string>
    <string name="rajveer_singh">Rajveer Singh</string>
    <string name="emp_code_2884">Emp Code - 2884</string>
    <string name="softwere_developer">Softwere Developer</string>
    <string name="doj_01_dec_2017">DOJ : 01-Dec-2017</string>
    <string name="to_date">To Date</string>
    <string name="reason">Reason</string>
    <string name="leave_type">Leave Type</string>
    <string name="from_date">From Date</string>
    <string name="date">Date</string>
    <string name="strSelectDate">Select Date</string>
    <string name="colon">:</string>
    <string name="status">Status</string>
    <string name="siteid">SiteId</string>
    <string name="my_claim">My Claims</string>
    <string name="claim_submit">Claim submitted successfully</string>
    <string name="add_more_claim">Add More claim</string>
    <string name="myClaim">MyClaim</string>
    <string name="completed_task">Completed Task</string>
    <string name="success">Success</string>
    <string name="_true">true</string>
    <string name="message">Message</string>
    <string name="no_record_found">No record found</string>
    <string name="please_try_again">Please try again</string>
    <string name="total_claims">Total claims</string>
    <string name="advance_claims">Advance Claims</string>
    <string name="leavedate">LeaveDate</string>
    <string name="show_salary">Show Salary</string>
    <string name="earnings">Earnings</string>
    <string name="setting">Settings</string>
    <string name="location_sms">Please switch on location</string>
    <string name="location_warning">Location Warning</string>
    <string name="location_settings_desktop">Your mobile\'s location mode setting is currently set as \"Location Off\".Some important features of this app will not work with this setting. Please change this setting by turning on the location. Do you want to turn on the location?"</string>
    <string name="no_advance_claim">No Advance Claim</string>
    <string name="coming_soon">coming soon</string>
    <string name="no_completed_task">No completed task</string>
    <string name="aniversary_of_htis">To Celebrate the 11th anniversary of HTIS Telecom Pvt Ltd.</string>
    <string name="no_leave_applied">No leave applied</string>
    <string name="accept_advance">Accept Advance</string>
    <string name="claim_title_txt">Claim Title</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="file_attachment">File Attachment</string>
    <string name="project_name">Project Name</string>
    <string name="site_id">Site Id</string>
    <string name="site_name">Site Name</string>
    <string name="longitude">Longitude</string>
    <string name="view_map">View Map</string>
    <string name="activity">Activity</string>
    <string name="remarks">Remarks</string>
    <string name="wrokdate">Workdate</string>
    <string name="other_activity_in_progress">Other activity in progress</string>
    <string name="no_salary_details">No salary details</string>
    <string name="basic">Basic</string>
    <string name="_500">500</string>
    <string name="hra">HRA</string>
    <string name="conveyance">Conveyance</string>
    <string name="medical">Medical</string>
    <string name="special">Special</string>
    <string name="gross_pay">Gross Pay</string>
    <string name="deductions">Deductions</string>
    <string name="lwf">LWF</string>
    <string name="donate">Donate</string>
    <string name="gross_deductions">Gross Deductions</string>
    <string name="net_payable">Net Payable</string>
    <string name="no_task_assign">No task assign,Please click to add button</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="_0_00">: 0.00</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="close">Close</string>
    <string name="add_more">Add More</string>
    <string name="project">Project</string>
    <string name="site">Site</string>
    <string name="task">Task</string>
    <string name="total">Total</string>
    <string name="approved">Approved</string>
    <string name="transport_txt">Transport</string>
    <string name="distance">Distance</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="description">Description</string>
    <string name="notification">Notification</string>
    <string name="txt_documents_directory">Documents Directory</string>
    <string name="amount_txt">Amount</string>
    <string name="latitude_txt">Latitude</string>
    <string name="phone">Phone Number</string>
    <string name="companyName">Company Name</string>
    <string name="no_of_emp">No of employee</string>
    <string name="profesion">Profession</string>
    <string name="report">Reports</string>
    <string name="sing_up">SignUp</string>
    <string name="Address">Address</string>
    <string name="txt_hint_new_password">New Password</string>
    <string name="txt_hint_confirm_password">Confirm Password</string>
    <string name="err_password_empty">Please enter your password.</string>
    <string name="err_newpassword_empty">Please enter your new  password.</string>
    <string name="err_confirm_password_empty">Please enter confirm password.</string>
    <string name="err_password_invalid">Password is not valid</string>
    <string name="err_password_not_match">Password does not match</string>
    <string name="err_current_password">Current password can not be empty</string>
    <string name="err_current_password_not_correct">Current password not correct</string>
    <string name="about_us_txt">HTIS Telecom Inc, has been in the business of Telecom and IT services for over 12 years and has become a dominant player in provision of Advance Network services including Core, Transport, Access, IT Infrastructure, Software and Manpower Outsourcing services with strategic partnerships with OEM vendors like Cisco, Nokia, Samsung and Tier-1 operators like Reliance, Airtel, Vodafone in APAC and EMEAR region. </string>
    <string name="about_app_txt">Htis app is an ‘Employee Self Care Application’ which is complete package designed primarily for tracking movement of people working in the field and monitoring the status of the activities assigned to them in real time. App is very handy to use and can be downloaded on any android smart mobile phone. </string>
    <string name="about_app_txt_one">The user shall have any phone having internet connectivity with GPS. He can login in the application with the given credentials. The app gives the option to save the password to avoid entering password again.Forget Password allows him to recover password on his registered email address.</string>
    <string name="select_the_date">Select the date</string>
    <string name="current_address_hint">Please write your current address</string>
    <string name="current_street_hint">Please write your current street</string>
    <string name="city_and_country_hint">Please write your current city and country</string>
    <string name="strAmount">Amount</string>
    <string name="txtRequestAdvance">Request Advance</string>
    <string name="strMyTeam">Team</string>
    <string name="strMyProfile">Profile</string>
    <string name="strMyTask">Task</string>
    <string name="strLeaveOD"><![CDATA[Leave & OD & Comp Off]]></string>
    <string name="strMyAttendance"> Attendance</string>
    <string name="strDocumentDirectory">Document Directory</string>
    <string name="strMySalary">Salary</string>
    <string name="strMyClaims">Claims</string>
    <string name="strChat">Chat</string>
    <string name="strForms">Forms</string>
    <string name="strHelp">Help</string>
    <string name="strFeedback">Feedback</string>
    <string name="strSetting">Settings</string>
    <string name="strProfile">Profile</string>
    <string name="strAbout">About</string>
    <string name="strLogs">Logs</string>
    <string name="strTermsOfUse">Terms Of Use</string>
    <string name="strLegal_Privacy"><![CDATA[Legal & Privacy]]></string>
    <string name="strSendLogReport">Send Log Reports</string>
    <string name="strChangePassword">Change Password</string>
    <string name="strDate">Date</string>
</resources>