<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/llStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_15sdp">

        <com.htistelecom.htisinhouse.font.Ubuntu
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/current_location"
            android:textColor="@color/grey_text2"
            android:textSize="16sp" />

        <com.htistelecom.htisinhouse.font.UbuntuEditText
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/current_address_hint"
            android:maxLength="2000"
            android:maxLines="8"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:textSize="14sp" />

        <com.htistelecom.htisinhouse.font.UbuntuEditText
            android:id="@+id/tvStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/current_street_hint"
            android:maxLength="2000"
            android:maxLines="8"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:textSize="14sp" />

        <com.htistelecom.htisinhouse.font.UbuntuEditText
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/city_and_country_hint"
            android:maxLength="2000"
            android:maxLines="8"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_13sdp"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <com.htistelecom.htisinhouse.font.UbuntuButton
                android:id="@+id/btnStartDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/login_button"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/white" />


            <com.htistelecom.htisinhouse.font.UbuntuButton
                android:id="@+id/btnSDCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight=".5"
                android:background="@drawable/cancel_button"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/grey_text" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>