<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.htistelecom.htisinhouse.font.UbuntuBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/txtRequestAdvance"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.htistelecom.htisinhouse.font.UbuntuBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strDate"
                android:textColor="@color/grey_text2"
                android:textSize="15sp" />



                <RelativeLayout
                    android:id="@+id/rlSelectDateRequestAdvance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_grey_background"
                    android:layout_marginTop="10dp"

                   >

                    <com.htistelecom.htisinhouse.font.Ubuntu
                        android:id="@+id/tvSelectDateRequestAdvance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_the_date"
                        android:padding="12dp"
                        android:textSize="16sp" />


                    <ImageView
                        android:id="@+id/ivCalendar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_calendar" />

                </RelativeLayout>



            <com.htistelecom.htisinhouse.font.UbuntuBold
                android:id="@+id/txtAmountAdvanceClaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/strAmount"
                android:textColor="@color/grey_text2"
                android:textSize="15sp" />

            <com.htistelecom.htisinhouse.font.UbuntuEditText
                android:id="@+id/etAmountAdvanceClaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:hint="Type amount here"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textSize="14sp" />

            <com.htistelecom.htisinhouse.font.UbuntuBold
                android:id="@+id/txtReasonAdvanceClaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reason"
                android:textColor="@color/grey_text2"
                android:textSize="15sp" />

            <com.htistelecom.htisinhouse.font.UbuntuEditText
                android:id="@+id/etReasonAdvanceClaim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_edittext"
                android:maxLines="3"
                android:padding="@dimen/_20sdp"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnSubmitAdvanceClaim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/rect_background_border_orange_radius_13"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/btnCancelAdvanceClaim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".5"
                    android:background="@drawable/rect_no_background_border_orange"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>